# IE306-Drone-Delivery-RL

./: .gitignore  AI_USE.md  FIRST_README.md  README.md  ROLES.md  START_HERE.txt  Team_Report.docx  agent_interface.py  file_list.txt  pyproject.toml  reproduce.sh  requirements.txt  run_all.py  run_all_dqn.py  ~$am_Report.docx  ~WRL2816.tmp
configs/: double_dqn.yaml  dqn.yaml  eval_standard.yaml  meta_dynaq.yaml  meta_dynaq_v2.yaml  meta_dynaq_v2_p0.yaml  meta_dynaq_v2_p30.yaml  priority_dynaq.yaml
datasets/: offline_mixed_dataset.npz
drone_dispatch_env/: __init__.py  baselines.py  config.py  env_control.py  env_dispatch.py  env_ma.py  evaluate.py  offline.py  run_eval.py  visualize.py  world.py
logs/: baselines_standard_eval.md  double_double_dqn_seed0.csv  double_double_dqn_seed1.csv  double_double_dqn_seed2.csv  dqn_no_target_seed0.csv  dqn_no_target_seed1.csv  dqn_no_target_seed2.csv  dqn_seed0.csv  dqn_seed1.csv  dqn_seed2.csv  dueling_dqn_seed0.csv  dueling_dqn_seed1.csv  dueling_dqn_seed2.csv  meta_dynaq_eval_seed0.json  meta_dynaq_eval_seed1.json  meta_dynaq_eval_seed2.json  meta_dynaq_seed0.csv  meta_dynaq_seed1.csv  meta_dynaq_seed2.csv  meta_dynaq_v2_eval_seed0.json  meta_dynaq_v2_eval_seed0_345.json  meta_dynaq_v2_eval_seed0_678.json  meta_dynaq_v2_p0_eval_seed0.json  meta_dynaq_v2_p0_seed0.csv  meta_dynaq_v2_p30_seed0.csv  meta_dynaq_v2_seed0.csv  offline_dataset_summary.csv  priority_dynaq_eval_seed2.json  priority_dynaq_eval_summary.csv  priority_dynaq_seed0.csv  priority_dynaq_seed1.csv  priority_dynaq_seed2.csv  role_c_final_baseline_table.csv  (+2 more)
(+84 files in other folders)
